--- a/main.css
+++ b/main.css
@@ -56,13 +56,13 @@ html{
 }
 .remove,.add{
     cursor: pointer;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease,visibility 0.5s ease;
 }
 .minus{
     background-position-x: -20px;
 }
 .plus{
-    background-position-x: 0px;
+    background-position-x: 0;
 }
 
 #add-col{
@@ -72,6 +72,12 @@ html{
     bottom: -104px;
 }
 #rem-col{
+
+}
+#rem-row{
+
+}
+.hidden{
+    visibility: hidden;
     opacity: 0;
 }
-#rem-row{opacity: 0;}
