--- a/main.css
+++ b/main.css
@@ -44,6 +44,8 @@ html{
 
 .remove:hover{
     background-color: #c84d4c;
+    visibility: visible;
+    opacity: 1;
 }
 
 .add{
@@ -56,7 +58,7 @@ html{
 }
 .remove,.add{
     cursor: pointer;
-    transition: opacity 0.5s ease,visibility 0.5s ease;
+    transition: opacity 1s ease,visibility 1s ease,background 1s ease;
 }
 .minus{
     background-position-x: -20px;
@@ -72,10 +74,10 @@ html{
     bottom: -104px;
 }
 #rem-col{
-
+    top: -104px;
 }
 #rem-row{
-
+ left: -104px;
 }
 .hidden{
     visibility: hidden;
