--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 
-.wrapper{
-
+.task-table{
     position: absolute;
+    top:200px;
+    left:200px;
+}
+.task-table__box{
     border: 1px #4dabe4 solid;
     padding: 1px;
-    left:200px;
-    top:200px;
+
 
 }
 
@@ -19,9 +21,8 @@
 .block{
 
     margin: 1px;
-    height: 100px;
-    width: 100px;
-    display: inline-block;
+    height: 50px;
+    width: 50px;
     background-color: #4dabe4;
    
     }
@@ -31,7 +32,6 @@
     margin:40px auto;
     height: 20px;
     width:20px;
-    background-image: url(./bBgSprite.png);
     background-repeat:no-repeat;
 }
 
@@ -59,23 +59,31 @@
     transition: opacity 1s ease,visibility 1s ease,background 1s ease;
 }
 .minus{
-    background-position-x: -20px;
+    background-image: url(minus.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: 10px;
+    background-size: 10px;
 }
 .plus{
-    background-position-x: 0;
+    background-image: url(./plus.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    -webkit-background-size: 10px;
+    background-size: 10px;
 }
 
-#add-col{
-    right:-104px;
+.add-col{
+    right:-54px;
 }
-#add-row{
-    bottom: -104px;
+.add-row{
+    bottom: -54px;
 }
-#rem-col{
-    top: -104px;
+.rem-col{
+    top: -54px;
 }
-#rem-row{
- left: -104px;
+.rem-row{
+ left: -54px;
 }
 .hidden{
     visibility: hidden;
